# vit-parallelization

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml
scripts/: run_cifar.sh  run_tiny.sh
src/vit_scratch/: experiment.py  train.py
src/vit_scratch/configs/: configs.py  data.py  log.py  model.py  register.py  train.py
src/vit_scratch/data/: cifar.py
src/vit_scratch/models/: vit.py
tests/: conftest.py  test_block.py  test_multihead_attn.py  test_patch_embed.py  test_vit.py
