[project]
name = "vit_scratch"
version = "0.1.0"
description = "Vision Transformer from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=25.3",
    "pyyaml>=6.0.2",
    "pytest>=8.4.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
